--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ SONATYPE_AUTOMATIC_RELEASE=true
 RELEASE_SIGNING_ENABLED=true
 
 GROUP=app.moviebase
-VERSION_NAME=0.3.0
+VERSION_NAME=0.4.0-SNAPSHOT
 
 POM_NAME=Trakt API for KMM
 POM_DESCRIPTION=Kotlin Multiplatform library to access the Trakt API.
