--- a/gradle.properties
+++ b/gradle.properties
@@ -22,8 +22,8 @@ POM_LICENCE_DIST=repo
 
 POM_URL=https://github.com/MoviebaseApp/trakt-api
 POM_SCM_URL=https://github.com/MoviebaseApp/trakt-api
-POM_SCM_CONNECTION=scm:git:git@github.com:MoviebaseApp/trakt-api.gi
-POM_SCM_DEV_CONNECTION=scm:git:git@github.com:MoviebaseApp/trakt-api.gi
+POM_SCM_CONNECTION=scm:git:git@github.com:MoviebaseApp/trakt-api.git
+POM_SCM_DEV_CONNECTION=scm:git:git@github.com:MoviebaseApp/trakt-api.git
 
 POM_DEVELOPER_ID=chrisnkrueger
 POM_DEVELOPER_NAME=Chris Krueger
