--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,19 +1,18 @@
 [versions]
-kotlin = "1.8.10"
-spotless = "6.18.0"
-ben-manes-versions = "0.46.0"
-dokka = "1.8.10"
+kotlin = "1.9.0"
+spotless = "6.19.0"
+ben-manes-versions = "0.47.0"
+dokka = "1.8.20"
 nexus = "1.3.0"
 kotlinx-datetime = "0.4.0"
-kotlinx-serialization = "1.5.0"
-coroutines = "1.6.4" # pinned due to https://youtrack.jetbrains.com/issue/KTOR-5728/
-ktor = "2.3.0"
-serialization = "1.5.0"
-ktlint = "0.48.2"
+kotlinx-serialization = "1.5.1"
+coroutines = "1.7.2"
+ktor = "2.3.2"
+ktlint = "0.50.0"
 junit-jupiter = "5.9.3"
-truth = "1.1.3"
+truth = "1.1.5"
 junit = "4.13.2"
-mockito-kotlin = "4.1.0"
+mockito-kotlin = "5.0.0"
 mockito-inline = "5.2.0"
 maven-publish = "0.25.2"
 
