--- a/gradle.properties
+++ b/gradle.properties
@@ -14,20 +14,20 @@ VERSION_NAME=0.7.0-SNAPSHOT
 
 POM_NAME=Trakt API for KMM
 POM_DESCRIPTION=Kotlin Multiplatform library to access the Trakt API.
-POM_INCEPTION_YEAR=2023
+POM_INCEPTION_YEAR=2024
 
 POM_LICENCE_NAME=The Apache Software License, Version 2.0
 POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENCE_DIST=repo
 
-POM_URL=https://github.com/MoviebaseApp/trakt-api
-POM_SCM_URL=https://github.com/MoviebaseApp/trakt-api
-POM_SCM_CONNECTION=scm:git:git@github.com:MoviebaseApp/trakt-api.git
-POM_SCM_DEV_CONNECTION=scm:git:git@github.com:MoviebaseApp/trakt-api.git
+POM_URL=https://github.com/MoviebaseApp/trakt-kotlin
+POM_SCM_URL=https://github.com/MoviebaseApp/trakt-kotlin
+POM_SCM_CONNECTION=scm:git:git@github.com:MoviebaseApp/trakt-kotlin.git
+POM_SCM_DEV_CONNECTION=scm:git:git@github.com:MoviebaseApp/trakt-kotlin.git
 
-POM_DEVELOPER_ID=chrisnkrueger
+POM_DEVELOPER_ID=ChrisKruegerDev
 POM_DEVELOPER_NAME=Chris Krueger
-POM_DEVELOPER_URL=https://github.com/username/
+POM_DEVELOPER_URL=https://github.com/ChrisKruegerDev
 
 # Required to publish to Nexus (see https://github.com/gradle/gradle/issues/11308)
 systemProp.org.gradle.internal.publish.checksums.insecure=true
